--- a/Assignment/Assignment 6.ipynb
+++ b/Assignment/Assignment 6.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a0490eb",
+   "id": "900df305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10a87080",
+   "id": "7567a2c8",
    "metadata": {},
    "outputs": [
     {
@@ -30,6 +30,146 @@
    ],
    "source": [
     "newtxt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4893f998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datablocks = []\n",
+    "for index in range(1, len(newtxt)):\n",
+    "    if index%4==0:\n",
+    "        datablocks.append(newtxt[index-4:index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "999508fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Data blocks: d1: 1111, d2: 0010, d3: 1001, d4: 1010, d5: 0011, d6: 0110, d7: 0010, d8: 0101, d9: 1010, d10: 1011, d11: 0101, d12: 0110, d13: 1011, d14: 0100, d15: 1001, d16: 0110, d17: 1011, d18: 0011, d19: 0011, d20: 1101, d21: 0110, d22: 0011, d23: 0100, d24: 1101, d25: 1100, d26: 1101, d27: 1110, d28: 0001, d29: 0111, d30: 1101, d31: 0101, d32: 0101, d33: 0101, d34: 1010, d35: 1000, d36: 0100, d37: 0111, d38: 0001, d39: 0010, d40: 1001, d41: 0110, d42: 0110, d43: 0001, d44: 1000, d45: 1000, d46: 1110, d47: 1000, d48: 1011, d49: 1000, d50: 1010, d51: 0110, d52: 0110, d53: 0111, d54: 1010, d55: 1000, d56: 1110, d57: 0110, d58: 1001, d59: 0111, d60: 1011, d61: 0110, d62: 0010, d63: 1000, d64: 0001, d65: 1011, d66: 0101, d67: 1111, d68: 0100, d69: 1010, d70: 1011, d71: 0101, d72: 0101, d73: 1001, d74: 1010, d75: 1110, d76: 0011, d77: 1001, d78: 1101, d79: 0111, d80: 0100, d81: 1001, d82: 0001, d83: 1110, d84: 1001, d85: 1001, d86: 1000, d87: 0011, d88: 1110, d89: 0110, d90: 0110, d91: 1011, d92: 1101, d93: 0110, d94: 0110, d95: 1001, d96: 1010, d97: 1010, d98: 1000, d99: 1010, d100: 1111, d101: 0110, d102: 1101, d103: 0110, d104: 1110, d105: 1000, d106: 0100, d107: 0010, d108: 0011, d109: 0100, d110: 1110, d111: 1011, d112: 1110, d113: 0010, d114: 1101, d115: 0010, d116: 1101, d117: 0101, d118: 0110, d119: 0010, d120: 1111, d121: 0010, d122: 0110, d123: 1011, d124: 1110, d125: 1100, d126: 1100, d127: 0000, d128: 1101, d129: 1000, d130: 1011, d131: 0011, d132: 1111, d133: 0101, d134: 1110, d135: 1100, d136: 0001, d137: 0011, d138: 0001, d139: 1100, d140: 1100, d141: 1110, d142: 1001, d143: 0101, d144: 1000, d145: 0001, d146: 1100, d147: 0111, d148: 1010, d149: 1100, d150: 0110, d151: 1000, d152: 1011, d153: 1000, d154: 1010, d155: 0110, d156: 0110, d157: 0111, d158: 1010, d159: 0110, d160: 1101, d161: 1010, d162: 1010, d163: 1010, d164: 1011, d165: 1100, d166: 1010, d167: 0101, d168: 0101, d169: 1011, d170: 0110, d171: 1011, d172: 0001, d173: 0100, d174: 1101, d175: 0111, d176: 0111, d177: 1000, d178: 0110, d179: 0011, d180: 0101, d181: 1111, d182: 0111, d183: 1001, d184: 1110, d185: 1101, d186: 1111, d187: 1011, d188: 1001, d189: 1111, d190: 0011, d191: 1011, d192: 1011, d193: 1011, d194: 0100, d195: 1001, d196: 1010, d197: 1100, d198: 0110, d199: 0011, d200: 0111, d201: 0101, d202: 1101, d203: 1111, d204: 0101, d205: 1001, d206: 1001, d207: 1110, d208: 1000, d209: 0001, d210: 1001, d211: 1011, d212: 0010, d213: 1111, d214: 0011, d215: 0011, d216: 1100, d217: 1110, d218: 0000'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = 'Data blocks: '\n",
+    "for i in range(len(datablocks)):\n",
+    "    if i == len(datablocks)-1:\n",
+    "        res = res + f'd{i+1}: ' + datablocks[i]\n",
+    "    else:\n",
+    "        res = res + f'd{i+1}: ' + datablocks[i] + ', '\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d5d980dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datablocks11 = []\n",
+    "for index in range(1, len(newtxt)):\n",
+    "    if index%11==0:\n",
+    "        datablocks11.append(newtxt[index-11:index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2e76a1b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Data blocks: d1: 11110010100, d2: 11010001101, d3: 10001001011, d4: 01010110101, d5: 01101011010, d6: 01001011010, d7: 11001100111, d8: 10101100011, d9: 01001101110, d10: 01101111000, d11: 01011111010, d12: 10101010101, d13: 10101000010, d14: 00111000100, d15: 10100101100, d16: 11000011000, d17: 10001110100, d18: 01011100010, d19: 10011001100, d20: 11110101000, d21: 11100110100, d22: 10111101101, d23: 10001010000, d24: 00110110101, d25: 11110100101, d26: 01011010101, d27: 01100110101, d28: 11000111001, d29: 11010111010, d30: 01001000111, d31: 10100110011, d32: 00000111110, d33: 01100110101, d34: 11101011001, d35: 10100110101, d36: 01010001010, d37: 11110110110, d38: 10110111010, d39: 00010000100, d40: 01101001110, d41: 10111110001, d42: 01101001011, d43: 01010101100, d44: 01011110010, d45: 01101011111, d46: 01100110000, d47: 00110110001, d48: 01100111111, d49: 01011110110, d50: 00001001100, d51: 01110011001, d52: 11010010101, d53: 10000001110, d54: 00111101011, d55: 00011010001, d56: 01110001010, d57: 01100110011, d58: 11010011011, d59: 01101010101, d60: 01010111100, d61: 10100101010, d62: 11011011010, d63: 11000101001, d64: 10101110111, d65: 10000110001, d66: 10101111101, d67: 11100111101, d68: 10111111011, d69: 10011111001, d70: 11011101110, d71: 11010010011, d72: 01011000110, d73: 00110111010, d74: 11101111101, d75: 01100110011, d76: 11010000001, d77: 10011011001, d78: 01111001100, d79: 11110011100'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = 'Data blocks: '\n",
+    "for i in range(len(datablocks11)):\n",
+    "    if i == len(datablocks11)-1:\n",
+    "        res = res + f'd{i+1}: ' + datablocks11[i]\n",
+    "    else:\n",
+    "        res = res + f'd{i+1}: ' + datablocks11[i] + ', '\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "485cc413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def HammingCode74(code):\n",
+    "    matrixG = [[1, 0, 0], \n",
+    "               [0, 1, 0], \n",
+    "               [1, 1, 0], \n",
+    "               [0, 0, 1], \n",
+    "               [1, 0, 1],\n",
+    "               [0, 1, 1],\n",
+    "               [1, 1, 1]]\n",
+    "    \n",
+    "    encoded = {}\n",
+    "    di = 0\n",
+    "    mi = 0\n",
+    "\n",
+    "    for i in range(1, 8):\n",
+    "        if i in [3, 5, 6, 7]:\n",
+    "            encoded[i] = code[di]\n",
+    "            di = di + 1\n",
+    "        else:\n",
+    "            encoded[i] = str((int(code[0])*matrixG[2][mi] + int(code[1])*matrixG[4][mi] + int(code[2])*matrixG[5][mi] + int(code[3])*matrixG[6][mi])%2)\n",
+    "            mi = mi + 1\n",
+    "            print(f'p{mi}: b1*' + str(matrixG[2][mi-1]) + ' + b2*' + str(matrixG[4][mi-1]) + ' + b3*' + str(matrixG[5][mi-1]) + ' + b4*' + str(matrixG[6][mi-1]) + ' = ' + code[0] + '*' + str(matrixG[2][mi-1]) + ' + ' + code[1] + '*' + str(matrixG[4][mi-1]) + ' + ' + code[2] + '*' + str(matrixG[5][mi-1]) + ' + ' + code[3] + '*' + str(matrixG[6][mi-1]) + '(mod 2) = ' + encoded[i])\n",
+    "    return encoded "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "033ea7d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1111:\n",
+      "Expand the block to 7 bits: _ _ 1 _ 1 1 1\n",
+      "p1: b1*1 + b2*1 + b3*0 + b4*1 = 1*1 + 1*1 + 1*0 + 1*1(mod 2) = 1\n",
+      "p2: b1*1 + b2*0 + b3*1 + b4*1 = 1*1 + 1*0 + 1*1 + 1*1(mod 2) = 1\n",
+      "p3: b1*0 + b2*1 + b3*1 + b4*1 = 1*0 + 1*1 + 1*1 + 1*1(mod 2) = 1\n",
+      "Encoded bitstring: 1 1 1 1 1 1 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(datablocks[0] + ':')\n",
+    "print('Expand the block to 7 bits: _ _ ' + datablocks[0][0] + ' _ ' + datablocks[0][1] + ' ' + datablocks[0][2] + ' ' + datablocks[0][3])\n",
+    "\n",
+    "output = HammingCode74(datablocks[0])\n",
+    "\n",
+    "print('Encoded bitstring: ' + ' '.join(output.values()) + '\\n')"
    ]
   }
  ],
